--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1237,6 +1237,7 @@
             android:layout_width="1dp"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
+            android:layout_marginVertical="8dp"
             android:orientation="vertical"
             android:background="?android:attr/listDivider"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -1285,6 +1286,7 @@
             android:layout_width="1dp"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
+            android:layout_marginVertical="8dp"
             android:orientation="vertical"
             android:background="?android:attr/listDivider"
             app:layout_constraintBottom_toBottomOf="parent"
