--- a/app/src/main/res/drawable/circle_button_extra.xml
+++ b/app/src/main/res/drawable/circle_button_extra.xml
@@ -3,7 +3,7 @@
     android:shape="oval">
 
     <solid
-        android:color="#00000000"/>
+        android:color="@color/darkColorPrimaryDark"/>
 
     <size
         android:width="60dp"
