--- a/app/src/main/res/drawable/square_ripple_button.xml
+++ b/app/src/main/res/drawable/square_ripple_button.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle">
 
     <solid
-        android:color="#00000000"/>
+        android:color="@color/darkColorPrimaryDark"/>
 
     <size
         android:width="60dp"
