--- a/app/src/main/res/layout/activity_main_round.xml
+++ b/app/src/main/res/layout/activity_main_round.xml
@@ -1090,7 +1090,7 @@
                 android:id="@+id/bParenthesisClose"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
+                android:background="@drawable/square_ripple_button"
                 android:elevation="12dp"
                 android:text=")"
                 android:textColor="#FFFFFF"
