--- a/app/src/main/res/layout/activity_main_round.xml
+++ b/app/src/main/res/layout/activity_main_round.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         android:clipChildren="false"
         android:clipToPadding="false"
+        android:tag="cMain`-mt"
         android:background="@color/darkColorPrimary"
         android:textAlignment="center">
 
@@ -27,6 +28,7 @@
             android:clickable="false"
             android:foreground="?attr/selectableItemBackground"
             android:textAllCaps="false"
+            android:tag="cMain`-mt"
             android:layout_marginBottom="32dp"
             app:layout_constraintTop_toTopOf="@id/delete"
             app:layout_constraintBottom_toBottomOf="@+id/delete"
@@ -96,7 +98,6 @@
                         android:textAlignment="viewEnd"
                         android:textColor="#FEFEFE"
                         android:textSize="42sp"
-                        android:inputType="text|textNoSuggestions"
                         android:importantForAutofill="no"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -724,6 +725,7 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
+                                android:tag="-b!`-b!t"
                                 android:text="!"
                                 android:textColor="#FFFFFF"
                                 android:textSize="@dimen/roundedTopBarCompTextSize"
@@ -740,6 +742,7 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
+                                android:tag="-btan`-btant"
                                 android:text="tan"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
@@ -767,6 +770,7 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
+                                android:tag="-bπ`-bπt"
                                 android:text="π"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
@@ -784,6 +788,7 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
+                                android:tag="-bcsc`-bcsct"
                                 android:text="csc"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
@@ -811,6 +816,7 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
+                                android:tag="-be`-bet"
                                 android:text="e"
                                 android:textAlignment="center"
                                 android:textAllCaps="false"
@@ -829,6 +835,7 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
+                                android:tag="-bsec`-bsect"
                                 android:text="sec"
                                 android:textAllCaps="false"
                                 android:textColor="#FFFFFF"
@@ -856,6 +863,7 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
+                                android:tag="-b%`-b%t"
                                 android:text="mod"
                                 android:textAlignment="center"
                                 android:textAllCaps="false"
@@ -874,6 +882,7 @@
                                 android:layout_marginVertical="4dp"
                                 android:layout_marginHorizontal="@dimen/roundedTopBarHMargin"
                                 android:elevation="0dp"
+                                android:tag="-bcot`-bcott"
                                 android:text="cot"
                                 android:textAlignment="center"
                                 android:textAllCaps="false"
@@ -1095,7 +1104,7 @@
             android:layout_marginStart="2dp"
             android:layout_marginVertical="4dp"
             android:layout_marginEnd="0dp"
-            android:tag="cTertiary`cTertiaryText"
+            android:tag="cTertiary`-btt"
             app:layout_constraintBottom_toTopOf="@+id/buttonView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tertiaryLeftGuide"
