--- a/app/src/main/res/drawable-v31/ic_termcalc_icon_text.xml
+++ b/app/src/main/res/drawable-v31/ic_termcalc_icon_text.xml
@@ -12,19 +12,19 @@
     <path
         android:pathData="M2106.5,609.5V670h-388.1v-60.6H2106.5z"
         android:strokeWidth="40"
-        android:fillColor="#FFFFFF"
-        android:strokeColor="#FFFFFF"/>
+        android:fillColor="@android:color/system_neutral1_800"
+        android:strokeColor="@android:color/system_neutral1_800"/>
 
     <path
         android:pathData="M1580.6,1946.8l381.1,-196.3v56.7l-321.1,161v1.6l321.1,161v56.7l-381.1,-196.3L1580.6,1946.8L1580.6,1946.8z"
         android:strokeWidth="40"
-        android:fillColor="#FFFFFF"
-        android:strokeColor="#FFFFFF"/>
+        android:fillColor="@android:color/system_neutral1_800"
+        android:strokeColor="@android:color/system_neutral1_800"/>
     <path
         android:pathData="M2015,2220.3l229.1,-595.4h55.8L2070,2220.3H2015z"
         android:strokeWidth="40"
-        android:fillColor="#FFFFFF"
-        android:strokeColor="#FFFFFF"/>
+        android:fillColor="@android:color/system_neutral1_800"
+        android:strokeColor="@android:color/system_neutral1_800"/>
 
   </group>
 </vector>
